@@ -177,6 +177,7 @@ AC_ARG_ENABLE(un,
 if test x$enable_un = xyes; then
 	AC_DEFINE(HAVE_UN, 1, [Define if unix domain socket support is enabled])
 	STRUCT_UCRED
+	AC_CHECK_FUNCS(getpeereid)
 fi
 
 
