@@ -5,6 +5,7 @@ ver 0.15.11 (2010/??/??)
   - mp4ff: support tags "albumartist", "band"
   - mikmod: fix memory leak
 * playlist: emit IDLE_OPTIONS when resetting single mode
+* listen: make get_remote_uid() work on BSD
 
 
 ver 0.15.10 (2010/05/30)
